--- a/.eslintrc
+++ b/.eslintrc
@@ -4,28 +4,56 @@
     "browser": true,
     "node": true
   },
+  "ecmaFeatures": {
+      "arrowFunctions": true,
+      "binaryLiterals": true,
+      "blockBindings": true,
+      "classes": true,
+      "defaultParams": true,
+      "destructuring": true,
+      "forOf": true,
+      "generators": true,
+      "modules": true,
+      "objectLiteralComputedProperties": true,
+      "objectLiteralDuplicateProperties": true,
+      "objectLiteralShorthandMethods": true,
+      "objectLiteralShorthandProperties": true,
+      "octalLiterals": true,
+      "regexUFlag": false,
+      "regexYFlag": false,
+      "restParams": true,
+      "spread": true,
+      "superInFunctions": true,
+      "templateStrings": true,
+      "unicodeCodePointEscapes": true,
+      "globalReturn": true,
+      "jsx": true,
+      "experimentalObjectRestSpread": true,
+  },
   "rules": {
       "no-mixed-requires": [0, false],
       "strict": [1, "never"],
+      "no-undef": 2,
+      "no-unused-vars": [2, {"vars": "all", "args": "after-used"}],
       "curly": 1,
       "no-bitwise": 1,
       "max-len": [1, 100, 4],
       "vars-on-top": 0,
       "guard-for-in": 1,
       "no-underscore-dangle": 0,
+      "no-func-assign": 2,
 
-
-      "no-loop-func": 2,
+      "no-loop-func": 1,
       "no-multi-spaces": 1,
 
       "comma-dangle": [1, "never"],
       "indent": [2, 4],
       "quotes": [2, "single"],
       "semi": [2, "always"],
-      "no-space-before-semi": 2,
+      "semi-spacing": [2, {"before": false, "after": true}],
 
       "brace-style": [2, "1tbs", { "allowSingleLine": true }],
-      "key-spacing": [2,
+       "key-spacing": [2,
           {
               "beforeColon": false,
               "afterColon": true
@@ -36,7 +64,16 @@
 
       "space-after-keywords": [1, "always"],
       "space-before-blocks": [1, "always"],
-      "space-in-brackets": [1, "never"],
+      "array-bracket-spacing": [2, "never", {
+          "singleValue": false,
+          "objectsInArrays": true,
+          "arraysInArrays": true
+      }],
+      "object-curly-spacing": [2, "never", {
+          "objectsInObjects": false,
+          "arraysInObjects": false
+      }],
+      "computed-property-spacing": [1, "never"],
       "space-in-parens": [1, "never"],
       "space-before-function-paren": [1, "never"],
       "space-infix-ops": [2, {"int32Hint": false}],
@@ -46,12 +83,45 @@
 
       "eol-last": 2,
 
+      "babel/generator-star-spacing": 1,
+      "babel/new-cap": 1,
+      "babel/object-curly-spacing": 1,
       "babel/object-shorthand": 1,
-      "babel/generator-star": 1,
-      "babel/generator-star-spacing": 1
+      "babel/arrow-parens": 0,
+
+      "react/display-name": 1,
+      "react/forbid-prop-types": 0,
+      "react/jsx-boolean-value": 1,
+      "react/jsx-closing-bracket-location": [1, {"selfClosing": "after-props", "nonEmpty": "after-props"}],
+      "react/jsx-curly-spacing": 1,
+      "react/jsx-indent-props": 1,
+      "react/jsx-max-props-per-line": [1, { "maximum": 3 }],
+      "react/jsx-no-duplicate-props": 2,
+      "react/jsx-no-literals": 1,
+      "react/jsx-no-undef": 2,
+      "jsx-quotes": [1, "prefer-double"],
+      "react/jsx-sort-prop-types": 1,
+      "react/jsx-sort-props": 1,
+      "react/jsx-uses-react": 1,
+      "react/jsx-uses-vars": 1,
+      "react/no-danger": 1,
+      "react/no-did-mount-set-state": 1,
+      "react/no-did-update-set-state": 1,
+      "react/no-direct-mutation-state": 1,
+      "react/no-multi-comp": 1,
+      "react/no-set-state": 1,
+      "react/no-unknown-property": 2,
+      "react/prop-types": 2,
+      "react/react-in-jsx-scope": 2,
+      "react/require-extension": 0,
+      "react/self-closing-comp": 1,
+      "react/sort-comp": 1,
+      "react/wrap-multilines": 1
+
   },
 
   "plugins": [
-      "babel"
+      "babel",
+      "react"
   ]
 }
