--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An experimental router for browser side JS",
   "main": "dist/index.js",
   "scripts": {
-    "test": "grunt test"
+    "test": "gulp test"
   },
   "repository": {
     "type": "git",
@@ -22,15 +22,21 @@
   },
   "homepage": "https://github.com/ameyms/switchboard#readme",
   "devDependencies": {
-    "babel-eslint": "^3.1.20",
-    "eslint": "^0.24.0",
-    "eslint-plugin-babel": "^1.0.0",
-    "grunt": "^0.4.5",
-    "grunt-babel": "^5.0.1",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-copy": "^0.8.0",
-    "grunt-eslint": "^16.0.0",
-    "load-grunt-tasks": "^3.2.0",
-    "time-grunt": "^1.2.1"
+    "babel": "^5.8.21",
+    "babel-core": "^5.8.22",
+    "babel-eslint": "^4.1.3",
+    "chai": "^3.3.0",
+    "eslint": "^1.6.0",
+    "eslint-plugin-babel": "^2.1.1",
+    "gulp": "^3.9.0",
+    "gulp-babel": "^5.2.0",
+    "gulp-eslint": "^1.0.0",
+    "gulp-flowtype": "^0.4.8",
+    "gulp-mocha": "^2.1.3",
+    "mocha": "^2.2.5",
+    "sinon": "^1.15.4"
+  },
+  "dependencies": {
+    "eslint-plugin-react": "^3.5.1"
   }
 }
