--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gulp-flowtype": "^0.4.8",
     "gulp-mocha": "^2.1.3",
     "mocha": "^2.2.5",
+    "react": "^0.14.0",
     "sinon": "^1.15.4"
   },
   "dependencies": {
